--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Datenauswertung TxKohorte Mai 2018"
-#author: "Stephan Gloeckner"
+#author: "Stephan Glöckner"
 email: "stephan.gloeckner@helmholtz-hzi.de"
 output: 
   flexdashboard::flex_dashboard:
@@ -10,7 +10,7 @@ output:
     css: ["css/flex.css", "css/summarytools.css"]
     source_code: embed
     navbar:
-      - { title: "Back to Talk", href: "index.html#16"}
+      - { title: "Back to Talk", href: "index.html#10"}
 ---
 
 ```{r setup, include=FALSE}
@@ -23,7 +23,15 @@ library(DT)
 library(knitr)
 library(tidyverse)
 library(viridis)
-# data simulation
+library(formattable)
+library(RColorBrewer)
+
+```
+
+Studienpopulation 
+=======================================================================
+```{r pop_data_gen, echo=FALSE, warning=FALSE, message=FALSE}
+# data simulation - study population
 dfr <- tibble(Site = sample(paste0("Center_", 1:5), 2000, replace = TRUE),
              Organ = c(sample("Heart", 58, replace = TRUE),
                        sample("Liver", 89, replace = TRUE),
@@ -73,6 +81,43 @@ graph_site <- dfr %>%
     yaxis = list(title = "Patienten", zeroline = F)
   )
 
+```
+
+
+
+Row 
+-----------------------------------------------------------------------
+
+### Grafik Übersicht Studienpopulation
+```{r}
+fig_overview
+```
+
+Row 
+-----------------------------------------------------------------------
+### Populationstrend nach Zentrum
+```{r}
+graph_site
+```
+
+
+### Tabelle Übersicht Studienpopulation
+```{r}
+tab_overview %>% 
+  knitr::kable() %>%
+  kable_styling()
+```
+
+### Auf einem Blick
+```{r}
+
+```
+
+
+Bioproben {data-orientation=rows}
+=======================================================================
+
+```{r bio_data_gen, echo=FALSE, warning=FALSE, message=FALSE}
 
 
 # biosample generation
@@ -166,279 +211,8 @@ pat_value <- dfr_bio %>%
 pat_value <- nrow(pat_value)
 
 
-# Follow-up generation
-library(lubridate)
-df
-dfr_fu <- tibble(Site = sample(paste0("Center_", 1:5), 2000, replace = TRUE),
-       Organ = c(sample("Heart", 58, replace = TRUE),
-                 sample("Liver", 89, replace = TRUE),
-                 sample("Lung", 47, replace = TRUE),
-                 sample("Kidney", 871, replace = TRUE),
-                 sample("Pancreas", 589, replace = TRUE),
-                 sample("Stem Cells", 346, replace = TRUE)),
-       TxDate = sample(seq(as.Date('2017/01/01'), as.Date('2018/08/31'), by="day"), 2000, replace = TRUE),
-       FuDate = sample(seq(as.Date('2017/01/01'), as.Date('2018/08/31'), by="day"), 2000, replace = TRUE),
-       ID = sample(1:2000, 2000, replace = TRUE)
-) 
-
-export_date <- dmy("31-8-2018")
-
-fu_eval <- dfr_fu %>%
-  mutate(TxPeriod=export_date-TxDate,
-         FuPeriod=export_date-FuDate,
-         Fu_3m=interval(TxDate %m+% months(3)-days(28), TxDate %m+% months(3)+days(28)), # when should the FU be?
-         Fu_6m=interval(TxDate %m+% months(6)-days(28), TxDate %m+% months(6)+days(28)),
-         Fu_9m=interval(TxDate %m+% months(9)-days(28), TxDate %m+% months(9)+days(28)),
-         Fu_12m=interval(TxDate %m+% months(12)-days(28), TxDate %m+% months(12)+days(28)),
-         checked_3m=FuDate %within% Fu_3m, # was the FU in this interval?
-         checked_6m=FuDate %within% Fu_6m,
-         checked_9m=FuDate %within% Fu_9m,
-         checked_12m=FuDate %within% Fu_12m,
-         mandatory_3m=Fu_3m %within% interval(TxDate,TxDate+TxPeriod), # should there be a FU in this interval?
-         mandatory_6m=Fu_6m %within% interval(TxDate,TxDate+TxPeriod),
-         mandatory_9m=Fu_9m %within% interval(TxDate,TxDate+TxPeriod),
-         mandatory_12m=Fu_12m %within% interval(TxDate,TxDate+TxPeriod),
-         eval_3m=ifelse(checked_3m==T & mandatory_3m==T, "ok",
-                        ifelse(checked_3m==F & mandatory_3m==F, "ok",
-                               ifelse(checked_3m==T & mandatory_3m==F, "not needed","not done"))),
-         eval_6m=ifelse(checked_6m==T & mandatory_6m==T, "ok",
-                        ifelse(checked_6m==F & mandatory_6m==F, "ok",
-                               ifelse(checked_6m==T & mandatory_6m==F, "not needed","not done"))),
-         eval_9m=ifelse(checked_9m==T & mandatory_9m==T, "ok",
-                        ifelse(checked_9m==F & mandatory_9m==F, "ok",
-                               ifelse(checked_9m==T & mandatory_9m==F, "not needed","not done"))),
-         eval_12m=ifelse(checked_12m==T & mandatory_12m==T, "ok",
-                         ifelse(checked_12m==F & mandatory_12m==F, "ok",
-                                ifelse(checked_12m==T & mandatory_12m==F, "not needed","not done"))))
-
-tab_fu <- fu_eval %>%
-  select(ID, Organ, Site, TxDate, FuDate, contains("check"), contains("mandatory")) %>%
-  filter(!(is.na(TxDate) | is.na(FuDate))) %>%
-  select(-TxDate, -FuDate) %>%
-  group_by(ID, Organ, Site) %>%
-  summarise(ACTUAL_month_3=1*any(checked_3m),
-            TARGET_month_3=1*any(mandatory_3m),
-            ACTUAL_month_6=1*any(checked_6m),
-            TARGET_month_6=1*any(mandatory_6m),
-            ACTUAL_month_9=1*any(checked_9m),
-            TARGET_month_9=1*any(mandatory_9m),
-            ACTUAL_month_12=1*any(checked_12m),
-            TARGET_month_12=1*any(mandatory_12m))
-
-report_tab_fu <- tab_fu %>%
-  group_by(Site, Organ) %>%
-  summarise(ACTUAL_month_3=sum(ACTUAL_month_3),
-            TARGET_month_3=sum(TARGET_month_3),
-            Performance_month_3=round(100*ACTUAL_month_3/TARGET_month_3, digits=2),
-            ACTUAL_month_6=sum(ACTUAL_month_6),
-            TARGET_month_6=sum(TARGET_month_6),
-            Performance_month_6=round(100*ACTUAL_month_6/TARGET_month_6, digits=2),
-            ACTUAL_month_9=sum(ACTUAL_month_9),
-            TARGET_month_9=sum(TARGET_month_9),
-            Performance_month_9=round(100*ACTUAL_month_9/TARGET_month_9, digits=2),
-            ACTUAL_month_12=sum(ACTUAL_month_12),
-            TARGET_month_12=sum(TARGET_month_12),
-            Performance_month_12=round(100*ACTUAL_month_12/TARGET_month_12, digits=2)) %>%
-  ungroup()
-
-#### which graph and tab has to be rendered
-fu_exists <- report_tab_fu %>%
-  group_by(Organ, Site) %>%
-  summarise(count=n()) %>%
-  select(-count) %>%
-  ungroup() %>%
-  as.data.frame()
-fu_exists <- fu_exists %>% group_by(Organ) %>% summarise(count=n()) %>% as.data.frame()
-
-sketch <- htmltools::withTags(table(class='display',thead(tr(
-  th(rowspan=2, "Center"),
-  th(colspan=3, "Month 3"),
-  th(colspan=3, "Month 6"),
-  th(colspan=3, "Month 9"),
-  th(colspan=3, "Month 12")),
-  tr(lapply(rep(c("ACTUAL", "TARGET", "in %"), 4), th)))))
-
-tab <- function(organ){
-  tab <- report_tab_fu %>%
-    filter(Organ==organ) %>%
-    select(-Organ)
-  tab <- datatable(tab, container = sketch, rownames=F)
-  return(tab)
-}
-
-tables <- NULL
-for (i in 1:nrow(fu_exists)) {
-  tables[[i]] <- tab(fu_exists[i,1])
-}
-
-#### Figure Preparation            
-fig_fu <- report_tab_fu %>%
-  gather(contains("ACTU"), contains("TARG"), key="time", value = "Patients") %>%
-  select(-contains("Perf")) %>%
-  separate(time, c("ind", "times", "month")) %>% 
-  select(-contains("time"))
-fig_fu$month <- sapply(fig_fu$month, as.numeric)
-fig_fu <- fig_fu %>% select(Site, Organ, Indikator=ind, Monat=month, Patienten=Patients)
-
-graph <- function(organ){
-  g <- fig_fu %>%
-    filter(Organ==organ) %>%
-    arrange(desc(Indikator))
-  g$Indikator <- factor(g$Indikator, ordered = T)
-  g$Indikator <- factor(g$Indikator,levels(g$Indikator)[c(2,1)])
-  g <- g %>%
-    ggplot(aes(x=Monat,y=Patienten,group=Indikator,color=Indikator,fill=Indikator)) +
-    geom_line() +
-    geom_area(position="identity") +
-    facet_wrap("Site",nrow=1) +
-    scale_color_manual(values=c("#CC6666", "#66CC99"))+
-    scale_fill_manual(values=c("#CC6666", "#66CC99")) +
-    scale_x_continuous(breaks=c(3,6,9,12)) +
-    #scale_y_continuous(position="right") +
-    #theme(axis.text.x = element_text(angle = 45)) +
-    theme_bw()
-  #theme(strip.text = element_text(size=16), 
-  #      axis.text.x = element_text(angle = 45, size=12), 
-  #      axis.text.y = element_text(size=12))
-  g <- ggplotly(g, height=300, width=1500)
-  
-  return(g)
-}
-
-graphs <- NULL
-for (i in 1:nrow(fu_exists)) {
-  graphs[[i]] <- graph(fu_exists[i,1])
-}
-
-#### Save 4 RMD - TABs & GRAPHs ####
-fu_exists
-fu_herz <- list(tables[[1]], graphs[[1]])
-fu_leber <- list(tables[[2]], graphs[[2]])
-fu_lunge <- list(tables[[3]], graphs[[3]])
-fu_niere <- list(tables[[4]], graphs[[4]])
-fu_pankreas <- list(tables[[5]], graphs[[5]])
-fu_stammzellen <- list(tables[[6]], graphs[[6]])
-
-### generate data quality
-library(formattable)
-library(kableExtra)
-library(RColorBrewer)
-
-simulate_table <- function() {
-  tibble(Variable = sample(paste0("Item_", 1:9), 9),
-         Center_1 = sample(75:90, 9, replace = TRUE),
-         Center_2 = sample(75:90, 9, replace = TRUE),
-         Center_3 = sample(75:90, 9, replace = TRUE),
-         Center_4 = sample(75:90, 9, replace = TRUE),
-         Center_5 = sample(75:90, 9, replace = TRUE))
-}
-gen_total2 <- function (data) {
-  if (length(data)>1) {
-    num_vecs <- c("Center_1", "Center_2", "Center_3", "Center_4", "Center_5")
-    sum_data <- data %>% 
-      rbind(c("TOTAL", c(select_if(data, is.numeric) %>% colMeans())) %>% unlist() %>% as.vector()) %>% 
-      mutate_at(vars(num_vecs), as.numeric) %>% 
-      mutate(TOTAL = rowMeans(.[2:6])) %>% 
-      mutate_if(is.numeric, round, digits = 0)
-    return(sum_data)
-  }
-}
-col_rank <- function (vec) {
-  # function to color background in accordance to its value
-  # input vector : vec
-  # output vector : fin
-  farben <- length(unique(vec))
-  palette <- brewer.pal(farben, "RdYlBu")
-  max_farben <- vec %>% as_tibble %>% 
-    arrange(value) %>% distinct(value) %>% 
-    cbind(palette) 
-  fin <- vec %>% as_tibble() %>% 
-    left_join(max_farben) %>% # here we join the unique colors with its values
-    select(2) %>% unlist() %>% as.vector()
-  return(fin)
-}
-make_tbl_colorful <- function (table) {
-  gen_total2(table) %>% 
-    arrange(Variable) %>%
-    mutate_if(is.numeric, function (x) cell_spec(x, background = col_rank(x), color = "#a8a8a8", bold = TRUE)) %>% 
-    kable(escape = F, align = "c") %>%
-    kable_styling(c("striped", "condensed"), full_width = F)
-}
-
-make_table <- function(){
-  simulate_table() %>% 
-    gen_total2() %>% 
-    make_tbl_colorful()
-}
-
-tab_1oc <- simulate_table() %>% gen_total2()
-tab1 <- make_tbl_colorful(tab_1oc)
-
-tab_2oc <- simulate_table() %>% gen_total2()
-tab2 <- make_tbl_colorful(tab_2oc)
-
-tab_3oc <- simulate_table() %>% gen_total2()
-tab3 <- make_tbl_colorful(tab_3oc)
-
-ranking_gen <- tab_1oc %>% filter(grepl("TOTAL", Variable)) %>% select(-1, -TOTAL) %>% unlist() 
-ranking_postop <- tab_1oc %>% filter(grepl("TOTAL", Variable)) %>% select(-1, -TOTAL) %>% unlist() 
-ranking_bak <- tab_1oc %>% filter(grepl("TOTAL", Variable)) %>% select(-1, -TOTAL) %>% unlist() 
-
-avg_gen_site <- tab_1oc %>% filter(grepl("TOTAL", Variable)) %>% select(TOTAL) %>% unlist() %>% as.vector()
-avg_postop <- tab_2oc %>% filter(grepl("TOTAL", Variable)) %>% select(TOTAL) %>% unlist() %>% as.vector()
-avg_bak <- tab_3oc %>% filter(grepl("TOTAL", Variable)) %>% select(TOTAL) %>% unlist() %>% as.vector()
-
-make_ranking_trend <- function(datum) {
-  id <- ymd(datum)
-  simulate_table() %>% gen_total2() %>% filter(grepl("TOTAL", Variable)) %>% 
-    select(-1, -TOTAL) %>% 
-    mutate(id = id)
-}
-
-datum <- sapply(seq(ymd('2017-1-1'), ymd('2018-8-1'), by = "month"), list)
-
-gen_plot <- map_dfr(datum, make_ranking_trend)
-postop_plot <- map_dfr(datum, make_ranking_trend)
-bak_plot <- map_dfr(datum, make_ranking_trend)
-
-
-
 ```
 
-Studienpopulation 
-=======================================================================
-
-Row 
------------------------------------------------------------------------
-
-### Grafik Übersicht Studienpopulation
-```{r}
-fig_overview
-```
-
-Row 
------------------------------------------------------------------------
-### Populationstrend nach Zentrum
-```{r}
-graph_site
-```
-
-
-### Tabelle Übersicht Studienpopulation
-```{r}
-tab_overview %>% 
-  knitr::kable() %>%
-  kable_styling()
-```
-
-### Auf einem Blick
-```{r}
-
-```
-
-
-Bioproben {data-orientation=rows}
-=======================================================================
 
 Column 
 -----------------------------------------------------------------------
@@ -633,6 +407,163 @@ knitr::kable(doubles)
 Follow - Up
 =======================================================================
 
+```{r FU_data_gen, echo=FALSE, warning=FALSE, message=FALSE}
+# Follow-up generation
+library(lubridate)
+dfr_fu <- tibble(Site = sample(paste0("Center_", 1:5), 2000, replace = TRUE),
+       Organ = c(sample("Heart", 58, replace = TRUE),
+                 sample("Liver", 89, replace = TRUE),
+                 sample("Lung", 47, replace = TRUE),
+                 sample("Kidney", 871, replace = TRUE),
+                 sample("Pancreas", 589, replace = TRUE),
+                 sample("Stem Cells", 346, replace = TRUE)),
+       TxDate = sample(seq(as.Date('2017/01/01'), as.Date('2018/08/31'), by="day"), 2000, replace = TRUE),
+       FuDate = sample(seq(as.Date('2017/01/01'), as.Date('2018/08/31'), by="day"), 2000, replace = TRUE),
+       ID = sample(1:2000, 2000, replace = TRUE)
+) 
+
+export_date <- dmy("31-8-2018")
+
+fu_eval <- dfr_fu %>%
+  mutate(TxPeriod=export_date-TxDate,
+         FuPeriod=export_date-FuDate,
+         Fu_3m=interval(TxDate %m+% months(3)-days(28), TxDate %m+% months(3)+days(28)), # when should the FU be?
+         Fu_6m=interval(TxDate %m+% months(6)-days(28), TxDate %m+% months(6)+days(28)),
+         Fu_9m=interval(TxDate %m+% months(9)-days(28), TxDate %m+% months(9)+days(28)),
+         Fu_12m=interval(TxDate %m+% months(12)-days(28), TxDate %m+% months(12)+days(28)),
+         checked_3m=FuDate %within% Fu_3m, # was the FU in this interval?
+         checked_6m=FuDate %within% Fu_6m,
+         checked_9m=FuDate %within% Fu_9m,
+         checked_12m=FuDate %within% Fu_12m,
+         mandatory_3m=Fu_3m %within% interval(TxDate,TxDate+TxPeriod), # should there be a FU in this interval?
+         mandatory_6m=Fu_6m %within% interval(TxDate,TxDate+TxPeriod),
+         mandatory_9m=Fu_9m %within% interval(TxDate,TxDate+TxPeriod),
+         mandatory_12m=Fu_12m %within% interval(TxDate,TxDate+TxPeriod),
+         eval_3m=ifelse(checked_3m==T & mandatory_3m==T, "ok",
+                        ifelse(checked_3m==F & mandatory_3m==F, "ok",
+                               ifelse(checked_3m==T & mandatory_3m==F, "not needed","not done"))),
+         eval_6m=ifelse(checked_6m==T & mandatory_6m==T, "ok",
+                        ifelse(checked_6m==F & mandatory_6m==F, "ok",
+                               ifelse(checked_6m==T & mandatory_6m==F, "not needed","not done"))),
+         eval_9m=ifelse(checked_9m==T & mandatory_9m==T, "ok",
+                        ifelse(checked_9m==F & mandatory_9m==F, "ok",
+                               ifelse(checked_9m==T & mandatory_9m==F, "not needed","not done"))),
+         eval_12m=ifelse(checked_12m==T & mandatory_12m==T, "ok",
+                         ifelse(checked_12m==F & mandatory_12m==F, "ok",
+                                ifelse(checked_12m==T & mandatory_12m==F, "not needed","not done"))))
+
+tab_fu <- fu_eval %>%
+  select(ID, Organ, Site, TxDate, FuDate, contains("check"), contains("mandatory")) %>%
+  filter(!(is.na(TxDate) | is.na(FuDate))) %>%
+  select(-TxDate, -FuDate) %>%
+  group_by(ID, Organ, Site) %>%
+  summarise(ACTUAL_month_3=1*any(checked_3m),
+            TARGET_month_3=1*any(mandatory_3m),
+            ACTUAL_month_6=1*any(checked_6m),
+            TARGET_month_6=1*any(mandatory_6m),
+            ACTUAL_month_9=1*any(checked_9m),
+            TARGET_month_9=1*any(mandatory_9m),
+            ACTUAL_month_12=1*any(checked_12m),
+            TARGET_month_12=1*any(mandatory_12m))
+
+report_tab_fu <- tab_fu %>%
+  group_by(Site, Organ) %>%
+  summarise(ACTUAL_month_3=sum(ACTUAL_month_3),
+            TARGET_month_3=sum(TARGET_month_3),
+            Performance_month_3=round(100*ACTUAL_month_3/TARGET_month_3, digits=2),
+            ACTUAL_month_6=sum(ACTUAL_month_6),
+            TARGET_month_6=sum(TARGET_month_6),
+            Performance_month_6=round(100*ACTUAL_month_6/TARGET_month_6, digits=2),
+            ACTUAL_month_9=sum(ACTUAL_month_9),
+            TARGET_month_9=sum(TARGET_month_9),
+            Performance_month_9=round(100*ACTUAL_month_9/TARGET_month_9, digits=2),
+            ACTUAL_month_12=sum(ACTUAL_month_12),
+            TARGET_month_12=sum(TARGET_month_12),
+            Performance_month_12=round(100*ACTUAL_month_12/TARGET_month_12, digits=2)) %>%
+  ungroup()
+
+#### which graph and tab has to be rendered
+fu_exists <- report_tab_fu %>%
+  group_by(Organ, Site) %>%
+  summarise(count=n()) %>%
+  select(-count) %>%
+  ungroup() %>%
+  as.data.frame()
+fu_exists <- fu_exists %>% group_by(Organ) %>% summarise(count=n()) %>% as.data.frame()
+
+sketch <- htmltools::withTags(table(class='display',thead(tr(
+  th(rowspan=2, "Center"),
+  th(colspan=3, "Month 3"),
+  th(colspan=3, "Month 6"),
+  th(colspan=3, "Month 9"),
+  th(colspan=3, "Month 12")),
+  tr(lapply(rep(c("ACTUAL", "TARGET", "in %"), 4), th)))))
+
+tab <- function(organ){
+  tab <- report_tab_fu %>%
+    filter(Organ==organ) %>%
+    select(-Organ)
+  tab <- datatable(tab, container = sketch, rownames=F)
+  return(tab)
+}
+
+tables <- NULL
+for (i in 1:nrow(fu_exists)) {
+  tables[[i]] <- tab(fu_exists[i,1])
+}
+
+#### Figure Preparation            
+fig_fu <- report_tab_fu %>%
+  gather(contains("ACTU"), contains("TARG"), key="time", value = "Patients") %>%
+  select(-contains("Perf")) %>%
+  separate(time, c("ind", "times", "month")) %>% 
+  select(-contains("time"))
+fig_fu$month <- sapply(fig_fu$month, as.numeric)
+fig_fu <- fig_fu %>% select(Site, Organ, Indikator=ind, Monat=month, Patienten=Patients)
+
+graph <- function(organ){
+  g <- fig_fu %>%
+    filter(Organ==organ) %>%
+    arrange(desc(Indikator))
+  g$Indikator <- factor(g$Indikator, ordered = T)
+  g$Indikator <- factor(g$Indikator,levels(g$Indikator)[c(2,1)])
+  g <- g %>%
+    ggplot(aes(x=Monat,y=Patienten,group=Indikator,color=Indikator,fill=Indikator)) +
+    geom_line() +
+    geom_area(position="identity") +
+    facet_wrap("Site",nrow=1) +
+    scale_color_manual(values=c("#CC6666", "#66CC99"))+
+    scale_fill_manual(values=c("#CC6666", "#66CC99")) +
+    scale_x_continuous(breaks=c(3,6,9,12)) +
+    #scale_y_continuous(position="right") +
+    #theme(axis.text.x = element_text(angle = 45)) +
+    theme_bw()
+  #theme(strip.text = element_text(size=16), 
+  #      axis.text.x = element_text(angle = 45, size=12), 
+  #      axis.text.y = element_text(size=12))
+  g <- ggplotly(g, height=300, width=1500)
+  
+  return(g)
+}
+
+graphs <- NULL
+for (i in 1:nrow(fu_exists)) {
+  graphs[[i]] <- graph(fu_exists[i,1])
+}
+
+#### Save 4 RMD - TABs & GRAPHs ####
+fu_herz <- list(tables[[1]], graphs[[1]])
+fu_leber <- list(tables[[2]], graphs[[2]])
+fu_lunge <- list(tables[[3]], graphs[[3]])
+fu_niere <- list(tables[[4]], graphs[[4]])
+fu_pankreas <- list(tables[[5]], graphs[[5]])
+fu_stammzellen <- list(tables[[6]], graphs[[6]])
+
+
+```
+
+
+
 Row {.tabset .tabset-fade} 
 -----------------------------------------------------------------------
 
@@ -722,6 +653,91 @@ no_FuDate
 
 Generell {data-navmenu="Datenqualität" data-icon="fa-list" data-orientation=columns}
 =============================
+
+```{r dq_data_gen, echo=FALSE, warning=FALSE, message=FALSE}
+### generate data quality
+simulate_table <- function() {
+  tibble(Variable = sample(paste0("Item_", 1:9), 9),
+         Center_1 = sample(75:90, 9, replace = TRUE),
+         Center_2 = sample(75:90, 9, replace = TRUE),
+         Center_3 = sample(75:90, 9, replace = TRUE),
+         Center_4 = sample(75:90, 9, replace = TRUE),
+         Center_5 = sample(75:90, 9, replace = TRUE))
+}
+gen_total2 <- function (data) {
+  if (length(data)>1) {
+    num_vecs <- c("Center_1", "Center_2", "Center_3", "Center_4", "Center_5")
+    sum_data <- data %>% 
+      rbind(c("TOTAL", c(select_if(data, is.numeric) %>% colMeans())) %>% unlist() %>% as.vector()) %>% 
+      mutate_at(vars(num_vecs), as.numeric) %>% 
+      mutate(TOTAL = rowMeans(.[2:6])) %>% 
+      mutate_if(is.numeric, round, digits = 0)
+    return(sum_data)
+  }
+}
+col_rank <- function (vec) {
+  # function to color background in accordance to its value
+  # input vector : vec
+  # output vector : fin
+  farben <- length(unique(vec))
+  palette <- brewer.pal(farben, "RdYlBu")
+  max_farben <- vec %>% as_tibble %>% 
+    arrange(value) %>% distinct(value) %>% 
+    cbind(palette) 
+  fin <- vec %>% as_tibble() %>% 
+    left_join(max_farben) %>% # here we join the unique colors with its values
+    select(2) %>% unlist() %>% as.vector()
+  return(fin)
+}
+make_tbl_colorful <- function (table) {
+  gen_total2(table) %>% 
+    arrange(Variable) %>%
+    mutate_if(is.numeric, function (x) cell_spec(x, background = col_rank(x), color = "#a8a8a8", bold = TRUE)) %>% 
+    kable(escape = F, align = "c") %>%
+    kable_styling(c("striped", "condensed"), full_width = F)
+}
+
+make_table <- function(){
+  simulate_table() %>% 
+    gen_total2() %>% 
+    make_tbl_colorful()
+}
+
+tab_1oc <- simulate_table() %>% gen_total2()
+tab1 <- make_tbl_colorful(tab_1oc)
+
+tab_2oc <- simulate_table() %>% gen_total2()
+tab2 <- make_tbl_colorful(tab_2oc)
+
+tab_3oc <- simulate_table() %>% gen_total2()
+tab3 <- make_tbl_colorful(tab_3oc)
+
+ranking_gen <- tab_1oc %>% filter(grepl("TOTAL", Variable)) %>% select(-1, -TOTAL) %>% unlist() 
+ranking_postop <- tab_1oc %>% filter(grepl("TOTAL", Variable)) %>% select(-1, -TOTAL) %>% unlist() 
+ranking_bak <- tab_1oc %>% filter(grepl("TOTAL", Variable)) %>% select(-1, -TOTAL) %>% unlist() 
+
+avg_gen_site <- tab_1oc %>% filter(grepl("TOTAL", Variable)) %>% select(TOTAL) %>% unlist() %>% as.vector()
+avg_postop <- tab_2oc %>% filter(grepl("TOTAL", Variable)) %>% select(TOTAL) %>% unlist() %>% as.vector()
+avg_bak <- tab_3oc %>% filter(grepl("TOTAL", Variable)) %>% select(TOTAL) %>% unlist() %>% as.vector()
+
+make_ranking_trend <- function(datum) {
+  id <- ymd(datum)
+  simulate_table() %>% gen_total2() %>% filter(grepl("TOTAL", Variable)) %>% 
+    select(-1, -TOTAL) %>% 
+    mutate(id = id)
+}
+
+datum <- sapply(seq(ymd('2017-1-1'), ymd('2018-8-1'), by = "month"), list)
+
+gen_plot <- map_dfr(datum, make_ranking_trend)
+postop_plot <- map_dfr(datum, make_ranking_trend)
+bak_plot <- map_dfr(datum, make_ranking_trend)
+
+
+
+```
+
+
 
 Column {data-width=200}
 -----------------------------------------------------------------------
