--- a/index.Rmd
+++ b/index.Rmd
@@ -156,13 +156,14 @@ class: ironman
 
 ### Conclusions
 
-* busy investigators need fast, individualized feedback
+* Does this feedback improve the __data quality__?
+
+* learned: busy investigators need fast, individualized feedback
 
 * dashboards provide a interactive solution, but `angular.js` dashboards need to be considered
 
-* data transfromation still the most cumbersum process
- 
-* DQ needs to be extended and visualization needs improvement (UXD, UXR)
+* data transfromation still the most cumbersum process, UXR/UXD needs to be applied
+
 
 ---
 
